--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-naked-redirect": "^0.1.3",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
+    "geoip-lite": "^1.3.8",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-prefix-plugin": "^1.1.0",
     "image-webpack-loader": "^5.0.0",
@@ -47,7 +48,8 @@
     "build": "webpack  --mode production --config webpack.react.prod.js",
     "buildProd": "export AMBIENTE=produccion && export URL_BACKEND=https://www.waiboc.com:3001 && webpack  --mode production --config webpack.react.prod.js",
     "start": "babel-node ./server/server.js",
-    "start:react": "webpack-dev-server --config webpack.react.dev.js"
+    "start:react": "webpack-dev-server --config webpack.react.dev.js",
+    "test": "babel-node ./test/conv"
   },
   "browserslist": [
     ">0.2%",
