--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "css-loader": "^3.0.0",
+    "echatbot-mongodb": "git+ssh://git@github.com/sebaeze/echatbot-mongodb.git",
     "express": "^4.16.4",
     "express-naked-redirect": "^0.1.3",
     "express-session": "^1.16.2",
