--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "scripts": {
     "build": "webpack  --mode production --config webpack.react.prod.js",
     "buildProd": "export AMBIENTE=produccion && export URL_BACKEND=https://www.waiboc.com:3001 && webpack  --mode production --config webpack.react.prod.js",
+    "postinstall": "npm install git+ssh://git@github.com/sebaeze/echatbot-mongodb.git",
     "start": "babel-node ./server/server.js",
     "start:react": "webpack-dev-server --config webpack.react.dev.js",
     "test": "babel-node ./test/conv"
