--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-expo": "^5.2.0",
     "body-parser": "^1.19.0",
     "caniuse-lite": "^1.0.30001008",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "css-loader": "^3.0.0",
@@ -41,7 +42,6 @@
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "session-memory-store": "^1.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.0",
     "webpack": "^4.30.0"
