--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-expo": "^5.2.0",
     "body-parser": "^1.19.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "caniuse-lite": "^1.0.30001008",
+    "compression-webpack-plugin": "^3.0.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
@@ -27,6 +29,7 @@
     "express": "^4.16.4",
     "express-naked-redirect": "^0.1.3",
     "express-session": "^1.16.2",
+    "express-static-gzip": "^2.0.5",
     "fs": "0.0.1-security",
     "geoip-lite": "^1.3.8",
     "html-webpack-plugin": "^3.2.0",
