--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-naked-redirect": "^0.1.3",
     "express-session": "^1.16.2",
     "express-static-gzip": "^2.0.5",
+    "file-loader": "^5.0.2",
     "fs": "0.0.1-security",
     "geoip-lite": "^1.3.8",
     "html-webpack-plugin": "^3.2.0",
