--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-syntax-export-namespace-from": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@sebaeze/echatbot-mongodb": "git+ssh://git@github.com/sebaeze/echatbot-mongodb.git",
     "antd": "^3.25.0",
     "axios": "^0.19.0",
     "babel-core": "^6.26.3",
