--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build:prod": "export AMBIENTE=produccion && export URL_BACKEND=https://www.waiboc.com:3001 && webpack  --mode production --config ./build_config/webpack.react.prod.js",
     "postinstall": "npm install git+ssh://git@github.com/sebaeze/echatbot-mongodb.git",
     "start": "babel-node ./server/server.js",
-    "start:react": "webpack-dev-server              --config ./build_config/webpack.react.dev.js",
-    "test:react-widget": "webpack-dev-server         --config ./build_config/webpack.react.widget.js"
+    "start:react": "webpack-dev-server              --config ./build_config/webpack.react.dev.js"
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
@@ -57,7 +56,7 @@
     "react-router-dom": "^5.0.1",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.0",
-    "waiboc-widget-react": "^1.0.20",
+    "waiboc-widget-react": "^1.0.22",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.6.1"
   },
