--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "tasks": [
         {
             "type": "npm",
-            "script": "start",
+            "script": "start:dev",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
