context work ing

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "npm install git+ssh://git@github.com/sebaeze/echatbot-mongodb.git",
     "start:dev": "SET DEBUG=WAIBOC:* && babel-node ./server/server.js",
     "start": "babel-node ./server/server.js",
-    "start:react": "webpack-dev-server              --config ./build_config/webpack.react.dev.js"
+    "start:react": "webpack-dev-server              --config ./build_config/webpack.react.dev.js",
+    "update:db":"npm update @sebaeze/echatbot-mongodb"
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
